--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 							<strong>😵</strong>
 
 							<ul>
-								<li>If interpreted then how does hoisting takes place?</li>
-								<li>JIT (just-in-time compiler) makes code optimizations (also create compiled versions); interpreted languages can never do that.</li>
+								<li class="fragment fade-up">If interpreted then how does hoisting takes place?</li>
+								<li class="fragment fade-up">JIT (just-in-time compiler) makes code optimizations (also create compiled versions); interpreted languages can never do that.</li>
 							</ul>
 					</section>
 					<section name="2/1">
