changes in slide

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
 							<div class="align-center">
 									<img src="assets/js-execution-context.png" alt="JS Execution Context" class="demo-img" height="300">
 							</div>
+							<ul>
+								<li>Compiles and executes JS code</li>
+								<li>Handling call stack — running your JS functions in some order</li>
+								<li>Managing memory allocation for objects — the memory heap</li>
+								<li>Garbage collection — of objects which are no longer in use</li>
+								<li>Provide all the data types, operators, objects and functions</li>
+							</ul>
 						</section>
 						<section name="2/0">
 							<p class="sub-heading">The JavaScript Engine</p>
